XIVY-17200 Replace deprecated StringUtils functions >> R12.0